# SevenT.vst3

./: .gitignore  CMakeLists.txt  README.md  SevenT.jucer
Builds/VisualStudio2022/: SevenT.sln  SevenT_SharedCode.vcxproj  SevenT_SharedCode.vcxproj.filters  SevenT_StandalonePlugin.vcxproj  SevenT_VST3.vcxproj  SevenT_VST3ManifestHelper.vcxproj  resources.rc
JuceLibraryCode/: BinaryData.cpp  BinaryData.h  JuceHeader.h  JucePluginDefines.h
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SynthSound.h  SynthVoice.cpp  SynthVoice.h
Source/Data/: ADSRData.cpp  ADSRData.h  FilterData.cpp  FilterData.h  OSCData.cpp  OSCData.h  UnisonData.cpp  UnisonData.h
Source/UI/: ADSRComponent.cpp  ADSRComponent.h  FilterComponent.cpp  FilterComponent.h  OSCComponent.cpp  OSCComponent.h  UnisonComponent.cpp  UnisonComponent.h
